--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite-plugin-glsl": "^0.1.1"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.42",
     "gsap": "^3.12.5",
     "split-type": "^0.3.4"
   }
